force-app/main/default/objects/Customer_Order__c/fields/Customer_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Customer_Longitude__c</fullName>
    <label>Customer Longitude</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>