force-app/main/default/objects/Customer_Order__c/fields/Customer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Postal_Code__c</fullName>
    <label>Customer Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>