force-app/main/default/objects/Customer_Order__c/fields/Customer_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_State__c</fullName>
    <label>Customer State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>