force-app/main/default/objects/Customer_Order__c/fields/Is_Bulk_Order__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <fullName>Is_Bulk_Order__c</fullName>
    <label>Is Bulk Order</label>
    <type>Checkbox</type>
</CustomField>