force-app/main/default/objects/Customer_Order__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <deleteConstraint>Restrict</deleteConstraint>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Customer Orders</relationshipLabel>
    <relationshipName>CustomerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>